<resources>
    <string name="app_name">plplbProject</string>
    <string name="action_settings">Settings</string>
    <string name="loginWelcome">Bienvenue</string>
    <string name="loginText">Numero Etudiant : ab123456</string>
    <string name="loginConnexion">Se connecter</string>
    <string name="loginError">Numero Etudiant invalide (format : ab123456)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="deconnexion">Deconnexion</string>

    <string name="menuPrecedent">Menu Precedent</string>
    <string name="precedent">Precedent</string>
    <string name="suivant">Suivant</string>
    <string name="finaliser">Finaliser</string>
</resources>
