<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <SearchView
        android:id="@+id/search"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"/>

    <ExpandableListView
        android:id="@+id/catList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        />



    <include
        layout="@layout/pied_page_ue"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="-90dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</LinearLayout>
