<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout02"
    android:layout_height="90dp"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/informationUe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="TODO"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/ue_restant"
        android:layout_weight="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/semestre_precedent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/naviagtion_button"
            android:textStyle="bold"
            android:text="@string/precedent"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/semestre_suivant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/naviagtion_button"
            android:textStyle="bold"
            android:text="@string/suivant"
            android:layout_weight="1"
            />


    </LinearLayout>

</LinearLayout>